--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,11 @@ spring:
     serialization:
       fail-on-empty-beans: false
 
+  #swagger
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 application:
   rest:
     context-path: /api
